--- a/style.css
+++ b/style.css
@@ -1872,7 +1872,7 @@ body {
   color: #fd8572;
 }
 
-.other-metal {
+.post-transition-metal {
   color: #4cddf3;
 }
 
@@ -1888,8 +1888,8 @@ body {
   color: #759fff;
 }
 
-.halogen {
-  color: #da1b1b;
+.unknown {
+  color: #eb0c0c;
 }
 
 .r1 {
@@ -2102,11 +2102,11 @@ body {
 #lanthanoids:checked ~ .periodic-table .element:not(.lanthanoid),
 #actinoids:checked ~ .periodic-table .element:not(.actinoid),
 #transition-metals:checked ~ .periodic-table .element:not(.transition-metal),
-#other-metals:checked ~ .periodic-table .element:not(.other-metal),
+#other-metals:checked ~ .periodic-table .element:not(.post-transition-metal),
 #metalloids:checked ~ .periodic-table .element:not(.metalloid),
 #other-nonmetals:checked ~ .periodic-table .element:not(.other-nonmetal),
 #noble-gasses:checked ~ .periodic-table .element:not(.noble-gas),
-#halogens:checked ~ .periodic-table .element:not(.halogen),
+#unknown:checked ~ .periodic-table .element:not(.unknown),
 #alkali-metals:checked ~ .periodic-table .placeholder,
 #alkaline-earth-metals:checked ~ .periodic-table .placeholder,
 #lanthanoids:checked ~ .periodic-table .placeholder:not(.lanthanoid),
@@ -2116,7 +2116,7 @@ body {
 #metalloids:checked ~ .periodic-table .placeholder,
 #other-nonmetals:checked ~ .periodic-table .placeholder,
 #noble-gasses:checked ~ .periodic-table .placeholder,
-#halogens:checked ~ .periodic-table .placeholder {
+#unknown:checked ~ .periodic-table .placeholder {
   opacity: 0.15;
   pointer-events: none;
 }
@@ -2126,11 +2126,11 @@ body {
 #lanthanoids:checked ~ .periodic-table .key label:not(.lanthanoid),
 #actinoids:checked ~ .periodic-table .key label:not(.actinoid),
 #transition-metals:checked ~ .periodic-table .key label:not(.transition-metal),
-#other-metals:checked ~ .periodic-table .key label:not(.other-metal),
+#other-metals:checked ~ .periodic-table .key label:not(.post-transition-metal),
 #metalloids:checked ~ .periodic-table .key label:not(.metalloid),
 #other-nonmetals:checked ~ .periodic-table .key label:not(.other-nonmetal),
 #noble-gasses:checked ~ .periodic-table .key label:not(.noble-gas),
-#halogens:checked ~ .periodic-table .key label:not(.halogen) {
+#unknown:checked ~ .periodic-table .key label:not(.unknown) {
   opacity: 0.65;
 }
 
