--- a/src/index.pug
+++ b/src/index.pug
@@ -150,7 +150,7 @@ mixin placeholder(number, material, column, row)
     +element(115, 'Mc', 'Moscovium', '(290)', [2,8,18,32,32,18,5], 'unknown', 15, 7)
     +element(116, 'Lv', 'Livermorium', '(293)', [2,8,18,32,32,18,6], 'unknown', 16, 7)
     +element(117, 'Ts', 'Tennessine', '(294)', [2,8,18,32,32,18,7], 'unknown', 17, 7)
-    +element(118, 'Og', 'Oganesson', '(294)', [2,8,18,32,32,18,8], 'unknown', 18, 7)
+    +element(118, 'Og', 'Oganesson', '(294)', [2,8,18,32,32,18,8], 'noble-gas', 18, 7)
     
     +placeholder('57-71', 'lanthanoid', 3, 6)
     +placeholder('89-103', 'actinoid', 3, 7)
