--- a/src/style.sass
+++ b/src/style.sass
@@ -10,7 +10,7 @@ $otherMetalColor: #4cddf3
 $metalloidColor: #3aefb6
 $otherNonmetalColor: #52ee61
 $nobleGasColor: #759fff
-$unknownColor: #eb0c0c
+$unknownColor: #cccccc
 
 body
   background: $bgColor
