--- a/style.css
+++ b/style.css
@@ -1872,7 +1872,7 @@ body {
   color: #fd8572;
 }
 
-.other-metal {
+.other-metals {
   color: #4cddf3;
 }
 
@@ -1889,7 +1889,7 @@ body {
 }
 
 .unknown {
-  color: #cccccc;
+  color: #eb0c0c;
 }
 
 .r1 {
