--- a/style.css
+++ b/style.css
@@ -2102,7 +2102,7 @@ body {
 #lanthanoids:checked ~ .periodic-table .element:not(.lanthanoid),
 #actinoids:checked ~ .periodic-table .element:not(.actinoid),
 #transition-metals:checked ~ .periodic-table .element:not(.transition-metal),
-#other-metals:checked ~ .periodic-table .element:not(.post-transition-metal),
+#other-metals:checked ~ .periodic-table .element:not(.other-metal),
 #metalloids:checked ~ .periodic-table .element:not(.metalloid),
 #other-nonmetals:checked ~ .periodic-table .element:not(.other-nonmetal),
 #noble-gasses:checked ~ .periodic-table .element:not(.noble-gas),
@@ -2126,7 +2126,7 @@ body {
 #lanthanoids:checked ~ .periodic-table .key label:not(.lanthanoid),
 #actinoids:checked ~ .periodic-table .key label:not(.actinoid),
 #transition-metals:checked ~ .periodic-table .key label:not(.transition-metal),
-#other-metals:checked ~ .periodic-table .key label:not(.post-transition-metal),
+#other-metals:checked ~ .periodic-table .key label:not(.other-metal),
 #metalloids:checked ~ .periodic-table .key label:not(.metalloid),
 #other-nonmetals:checked ~ .periodic-table .key label:not(.other-nonmetal),
 #noble-gasses:checked ~ .periodic-table .key label:not(.noble-gas),
